@@ -8,6 +8,8 @@ xine-lib (1.1.15) 2008-??-??
     others, there would be no problem.
   * V4L changes:
     - Delay preallocating video frames until we know how large they'll be
+    - Only try and set the tuner if we're going to use it. Setting the tuner
+      when using baseband video (CVBS, S-Video) breaks the input.
 
 xine-lib (1.1.14) 2008-06-29
   * DVB changes:
